menu.css
@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');

.menu_button {
    position: absolute;
    z-index: 3;
    left: 35px;
    top: 35px;
    cursor: pointer;
    transition: all 0.5s ease-out;
}
.menu_button .button_line {
    width: 28px;
    height: 3px;
    margin: 0 0 5px 0;
    background: white;
    transition: all 0.5s ease-out;
}
.menu_button.close {
    transform: rotate(180deg);
}
.menu_button.close .button_line:nth-child(1) {
    transform: rotate(45deg) translate(5px, 5px);
}
.menu_button.close .button_line:nth-child(2) {
    opacity: 0;
}
.menu_button.close .button_line:nth-child(3) {
    transform: rotate(-45deg) translate(7px, -6px);
}

.menu {
    position: absolute;
    top: 400px;
    color: white;
    top: 0;
    width: 100%;
    height: 100%;
    visibility: hidden;
    overflow: clip;
}
.menu.open {
    visibility: visible;
    transition: all 0.5s ease-in;
    background-color: black;
}
.menu ul {
    position: absolute;
    top: -10%;
    left: 10%;
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
}
.menu.open ul {
    transition: all 1s ease-in;
    transform: translate(0,100px);
}
.menu li {
    float: left;
}
.menu li a {
    display: block;
    color: white;
    text-align: center;
    padding: 40px;
    font-size: 150%;
    text-decoration: none;
    font-family: 'Quicksand', sans-serif;
}
.menu li a:hover {
    color: gray;
}

